@@ -130,7 +130,7 @@ Language,function,IFF,638,"IFF expr","Inline version of IF. eg, animal = ""cat""
 Language,keyword,BYREF,639,"BYREF","Sub/func argument declaration. Changes to the variable will be passed back to the caller.  Equivalent syntax to the @ character."
 Language,keyword,CASE,640,"CASE expr","Branch condition for a SELECT statement."
 Language,keyword,DEF,641,"DEF name[(par1[,...])] = expression","Defines a single line function. eg, DEF MySin(x) = SIN(x): ? MySin(pi/2)"
-Language,keyword,DO,642,"DO","FOR f IN files("*.txt") DO PRINT f"
+Language,keyword,DO,642,"DO","FOR f IN files(""*.txt"") DO PRINT f"
 Language,keyword,ELIF,643,"ELIF","foo = 2: if foo==1: ? ""one"": ELIF foo==2: ? ""two"": fi"
 Language,keyword,ELSE,644,"ELSE","foo = 2: if foo==1: ? ""one"": ELSE: ? ""not one"": fi"
 Language,keyword,ELSEIF,645,"ELSEIF","foo = 2: if foo==1: ? ""one"": ELSEIF foo==2: ? ""two"": fi"
@@ -241,9 +241,9 @@ String,command,SINPUT,768,"SINPUT src; var [, delim] [,var [, delim]] ...","Spli
 String,command,SPLIT,769,"SPLIT string, delimiters, words() [, pairs] [USE expr]","Returns the words of the specified string into array 'words'."
 String,command,SPRINT,770,"SPRINT var; [USING...;] ...","Create formated string and storing it to var. See also: PRINT command."
 String,function,ASC,771,"ASC (s)","Returns the ASCII code of first character of the string s."
-String,function,BCS,772,"BCS (s)","converts (B)ASIC-style strings to (C)-style (S)trings."
+String,function,BCS,772,"BCS (s)","Converts (B)ASIC-style strings to (C)-style (S)trings."
 String,function,BIN,773,"BIN (x)","Returns the binary value of x as string."
-String,function,CBS,774,"CBS (s)","converts (C)-style strings to (B)ASIC-style (S)trings."
+String,function,CBS,774,"CBS (s)","Converts (C)-style strings to (B)ASIC-style (S)trings."
 String,function,CHOP,775,"CHOP (source)","Chops off the last character of the string 'source' and returns the result."
 String,function,CHR,776,"CHR (x)","Returns one-char string of character with ASCII code x."
 String,function,DISCLOSE,777,"DISCLOSE (str[, pairs [, ignore-pairs]])","Discloses a string."
@@ -292,19 +292,16 @@ System,function,TIMER,821,"TIMER","Returns the number of seconds from midnight."
 Language,keyword,DECLARE,0,"DECLARE FUNC xxx","Forward declare SUB or FUNC. Obsolete QB compatibility"
 Language,keyword,TO,0,"FOR t = 1 TO 10","Specifies the loop counter end in a FOR loop"
 Language,keyword,STEP,0,"FOR t = 1 TO 10 STEP 2","Specifies the loop counter increment in a FOR loop"
-Language,keyword,USING,0,"",""
-Language,keyword,USG,0,"",""
-Language,keyword,AS,0,"",""
+Language,keyword,USING,0,"PRINT USING","See PRINT, SPRINT"
+Language,keyword,USG,0,"PRINT USG","Synonym for USING"
+Language,keyword,AS,0,"AS #fileN","See: OPEN"
 Language,keyword,TRY,0,"TRY","The TRY statement introduces a TRY/CATCH BLOCK"
 Language,keyword,CATCH,0,"CATCH [var | expr]","The CATCH statement is used to CATCH an run-time error. This is typically used with errors raised when calling a file system command that cannot be completed, for example attempting to open a non-existent file. The CATCH statement has two modes. You can supply a variable argument to store the error string. Alternatively you can supply an expression. When the raised error matches the (String) expression, the error will be caught. When using the expression mode, you can supply a succession of CATCH statements to handle various error messages separately."
 Language,keyword,END TRY,0,"END TRY","The END TRY statement marks the end of a TRY/CATCH block."
 Language,keyword,BG,0,"SOUND frq, dur [, vol] [BG]","Play sound in the background. This prevent the program from blocking while the sound plays."
 Language,function,THROW,0,"THROW","The THROW command (previously known as RTE) is used to initiate a catch-able error. If there is no surrounding TRY/CATCH block, THROW can be used to abort the program."
-Graphics,command,PLOT2,0,"",""
-String,function,WSPLIT,0,"",""
-System,command,UNLOADLIB,0,"",""
 Graphics,command,SHOWPAGE,0,"SHOWPAGE","This command is used to display pending graphics operations allowing for smooth animations."
 Data,function,ISMAP,0,"ISMAP (x)","Returns true if x is an MAP variable type. A MAP provides value-key pair access along with array or dotted notation. The MAP can be initialized from a String variable using the ARRAY command"
-Data,function,ISREF,0,"ISREF (x)","Returns true if x is a reference variable type. The REF variable type is a "reference" to another variable (like a pointer in c). You create a reference by assigning a variable with the BYREF keyword (or @ symbol)."
+Data,function,ISREF,0,"ISREF (x)","Returns true if x is a reference variable type. The REF variable type is a ""reference"" to another variable (like a pointer in c). You create a reference by assigning a variable with the BYREF keyword (or @ symbol)."
 Data,function,ARRAY,0,"ARRAY [var | expr]","Creates a ARRAY or MAP variable from the given string or expression"
 Console,command,FORM,0,"FORM","Create a form widget. "
