@@ -199,7 +199,6 @@ enum proc_keywords {
   kwCIRCLE,
   kwRANDOMIZE,
   kwSPLIT,
-  kwWSPLIT,
   kwWJOIN,
   kwPAUSE,
   kwDELAY,
@@ -233,7 +232,6 @@ enum proc_keywords {
   kwRMDIR,
   kwFLOCK,
   kwCHMOD,
-  kwPLOT2,
   kwPLOT,
   kwSTKDUMP,
   kwSWAP,
@@ -243,7 +241,6 @@ enum proc_keywords {
   kwBSAVE,
   kwTIMEHMS,
   kwEXPRSEQ,
-  kwUNLOADLIB,
   kwCALLCP,
   kwDEFINEKEY,
   kwSHOWPAGE,
