@@ -375,7 +375,6 @@ struct proc_keyword_s proc_table[] = {
 { "CIRCLE",             kwCIRCLE },
 { "RANDOMIZE",          kwRANDOMIZE },
 { "SPLIT",              kwSPLIT },
-{ "WSPLIT",             kwWSPLIT },
 { "JOIN",               kwWJOIN },
 { "PAUSE",              kwPAUSE },
 { "DELAY",              kwDELAY },
@@ -409,7 +408,6 @@ struct proc_keyword_s proc_table[] = {
 { "TSAVE",              kwSAVELN },
 { "LOCK",               kwFLOCK },
 { "CHMOD",              kwCHMOD },
-{ "PLOT2",              kwPLOT2 },
 { "PLOT",               kwPLOT },
 { "SWAP",               kwSWAP },
 { "DIRWALK",            kwDIRWALK },
@@ -418,7 +416,6 @@ struct proc_keyword_s proc_table[] = {
 { "BSAVE",              kwBSAVE },
 { "TIMEHMS",            kwTIMEHMS },
 { "EXPRSEQ",            kwEXPRSEQ },
-{ "UNLOADLIB",          kwUNLOADLIB },
 { "CALL",               kwCALLCP },
 { "DEFINEKEY",          kwDEFINEKEY },
 { "SHOWPAGE",           kwSHOWPAGE },
